tests/invalid/20_generic_non_generic_call.ml
int32 f(int32 x) {
    return x;
}

int main() {
    int32 x = f<int32>(42);

    return 0;
}
